# agendroid

./: .gitattributes  .gitignore  settings.gradle.kts
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
core/ai/: build.gradle.kts
core/common/: build.gradle.kts
core/data/: CMakeLists.txt  build.gradle.kts
core/data/schemas/com.agendroid.core.data.db.AppDatabase/: 1.json  2.json
core/data/src/androidTest/kotlin/com/agendroid/core/data/dao/: ChunkDaoTest.kt  ContactPreferenceDaoTest.kt  ConversationSummaryDaoTest.kt  KnowledgeDocumentDaoTest.kt  NoteDaoTest.kt
core/data/src/androidTest/kotlin/com/agendroid/core/data/db/: AppDatabaseEncryptionTest.kt  AppDatabaseMigrationTest.kt
core/data/src/androidTest/kotlin/com/agendroid/core/data/repository/: KnowledgeIndexRepositoryTest.kt  ProviderRepositorySmokeTest.kt
core/data/src/androidTest/kotlin/com/agendroid/core/data/util/: PhoneNumberNormalizerTest.kt
core/data/src/androidTest/kotlin/com/agendroid/core/data/vector/: VectorStoreTest.kt
core/data/src/main/: AndroidManifest.xml
core/data/src/main/cpp/: sqlite_vec_jni.c
core/data/src/main/kotlin/com/agendroid/core/data/dao/: AppSettingsDao.kt  ChunkDao.kt  ContactPreferenceDao.kt  ConversationSummaryDao.kt  IndexedSourceDao.kt  KnowledgeDocumentDao.kt  NoteDao.kt  PendingSmsReplyDao.kt
core/data/src/main/kotlin/com/agendroid/core/data/db/: AppDatabase.kt  AppDatabaseMigrations.kt  DatabaseModule.kt  KeystoreKeyManager.kt
core/data/src/main/kotlin/com/agendroid/core/data/entity/: AppSettingsEntity.kt  ChunkEntity.kt  ContactPreferenceEntity.kt  ConversationSummaryEntity.kt  IndexedSourceEntity.kt  KnowledgeDocumentEntity.kt  NoteEntity.kt  PendingSmsReplyEntity.kt
core/data/src/main/kotlin/com/agendroid/core/data/model/: CallLogEntry.kt  ContactInfo.kt  SmsMessage.kt  SmsThread.kt
core/data/src/main/kotlin/com/agendroid/core/data/repository/: AppSettingsRepository.kt  CallLogRepository.kt  ContactsRepository.kt  IndexedSourceRepository.kt  KnowledgeIndexRepository.kt  PendingSmsReplyRepository.kt  RepositoriesModule.kt  SmsThreadRepository.kt
core/data/src/main/kotlin/com/agendroid/core/data/util/: PhoneNumberNormalizer.kt
core/data/src/main/kotlin/com/agendroid/core/data/vector/: SqliteVecAndroid.kt  VectorResult.kt  VectorStore.kt  VectorStoreJni.kt  VectorStoreModule.kt
core/embeddings/: build.gradle.kts
core/telephony/: build.gradle.kts
core/voice/: build.gradle.kts
docs/superpowers/plans/: 2026-03-20-plan-1-scaffolding.md  2026-03-20-plan-2-call-pipeline-spike.md  2026-03-20-plan-3-core-data.md  2026-03-21-plan-4-core-ai-embeddings.md  2026-03-22-plan-5-core-voice.md  (+2 more)
feature/assistant/: build.gradle.kts
feature/phone/: build.gradle.kts
feature/sms/: build.gradle.kts
gradle/: libs.versions.toml
spike/call-pipeline/: build.gradle.kts
(+152 files in other folders)
